Release 1.24

#137 Change LrAttribute.getJavaType() to return Class object
#157 Not enough diagnostics on misconfigured listeners
#161 Unmapped PK causes response encoding to fail

Release 1.23

#144 Merge link-rest-docs repo into link-rest
#148 Optimizing paginated fetches
#153 Treat byte[] properties as Base64-encoded when parsing request payload
#154 Add JSON Converters for Java 8 Dates
#156 Support encoding of entities with no IDs
#158 POJO's with relationships can't be encoded.

Release 1.22

#126 LinkRest JSON Path
#132 Listener param and return type are forced to be BaseLinearProcessingStage instead of ProcessingStage
#134 LinkRestException logging should include cause message
#141 Implement `start`/`limit` for advanced `include`s
#142 PUT fails when existing many-to-many relationship passed into JSON

Release 1.21

#117 Sync: Linking with to-many relationships
#120 Custom escape sequences for Unicode characters in JSON
#121 PropertyMetadataEncoder should work with primitive types
#123 Update dependency versions

Release 1.20

#78  Parsed update payload objects as resource method parameters
#101 Add supporting of id-value for foreign key value during post and put.
#109 Support for compound IDs in LR service operations
#115 Refactoring of the service layer
#116 UpdateBuilder.mapper(String) and UpdateBuilder.mapper(Property)

Release 1.19

#103 Support for annotation-based stage listeners - select listeners
#110 Refactor Select stage names to be more meaningful
#111 Annotation-based listeners for update chains
#112 Externalizing Processor Chain invocation
#113 UpdateBuilder / UpdateResponse / EntityUpdate refactoring
#114 Collection Document: remove "success":true key, keep it under SenchaAdapter

Release 1.18

#100 LR metadata
#102 Remove DataResponse.queryProperty
#105 SenchaAdapter: filter should disengage if “disabled":true option is passed
#107 Select is run twice within CayenneFetchStage 

Release 1.17
